# pixis

./: .gitignore  .travis.yml  BUILD.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  TEMPLATES.md  TODO.md  cleanup.sh  requirements.txt  setup.cfg  setup.py  tox.ini
codegen/: classes.py  configurations.py  main.py  template_context.py  utils.py
codegen/languages/: client_typescript.py  server_flask.py
codegen/templates/typescript_client/: model.j2
docs/: BUILD.md  TODO.md
notes/: vscode_file_filter
notes/sample_specs/: openapi3.yaml
pixis/: classes.py  config.py  configuration.py  configurations.py  main.py  openapi.py  template_context.py  template_handler.py  utils.py
pixis/frameworks/: client_typescript.py  server_flask.py
pixis/implementations/: client_angular2.py  client_typescript.py  implementation.py  new_server_flask.py  server_flask.py
pixis/languages/: client_typescript.py  javascript.py  language.py  python.py  server_flask.py  server_node.py
pixis/new_lang_example/: build.py  myimplementation.py  mylanguage.py
pixis/templates/client_angular2/: Dockerfile.j2  encoder.j2  model.j2  service.j2
pixis/templates/flask_server/: controller.j2  main.j2
pixis/templates/node_server/: controller.j2  index.j2  package.j2  service.j2  writer.j2
pixis/templates/server_flask/: Dockerfile.j2  controller.j2  model.j2  setup.j2
samples/: build.py
samples/angular2-client/: package-lock.json
samples/angular2-client/src/: build.py
samples/mylang-myimpl-server/: build.py  myimplementation.py  mylanguage.py
samples/mylang-myimpl-server/my_server/: requirements.txt  setup.py
samples/python-flask-server/: build.py
samples/typescript-angular-client/: build.py
tests/: commands_test.py  conftest.py  generate_test.py  step_through_test.py
tests/files/: build_angular2.py
tests/specs/: testAdditionalProperties.yaml
(+12 files in other folders)
