[metadata]
name = pixis
summary = A code generator for REST APIs!
description-file = README.md
author = 
author_email = 
url = https://github.com/microservice-tools/pixis
license = MIT
classifier =
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
requires-python = >=3

[files]
packages =
    pixis

[global]

[bdist_wheel]
universal = 1

[pep8]
ignore = E501, E701
max-line-length = 200

[tool:pytest]
testpaths = tests
norecursedirs = myproject
