[metadata]
name = pixis
summary = A code generator for REST APIs
description-file = README.md
author = Andrew Ni
author_email = niandrew7@gmail.com
url = https://github.com/microservice-tools/pixis
license = LICENSE
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules

requires-python = >=3

[bdist_wheel]
universal = 1

[pep8]
ignore = E501, E701
max-line-length = 119

# [tool:pytest]
# testpaths = tests
# norecursedirs = myproject
